# legacy-training-cpp

gilded-rose-characterization-testing/: CMakeLists.txt  Dockerfile  GildedRoseUnitTests.cc  Makefile  README.md  run-once.sh
gilded-rose-golden-master/: .gitignore  CMakeLists.txt  Makefile  README.md  run-once.sh
print-date/: .gitignore  CMakeLists.txt  Calendar.cc  Calendar.h  Makefile  PrintDate.cc  PrintDate.h  PrintDateUnitTests.cc  Printer.cc  Printer.h  README.md  run-once.sh
tennis-refactoring-kata/: .gitignore  Makefile  README.md
tennis-refactoring-kata/src/: Tennis.cpp  Tennis.h
tennis-refactoring-kata/tests/: all_tests.cpp
trip-service/: Makefile  README.md  TripServiceUnitTests.cc  run-once.sh
trivia-golden-master/: GameRunner.cpp  Makefile  README.md
user-registration-refactoring-kata/: .gitignore  Dockerfile  Makefile  README.md
user-registration-refactoring-kata/src/: Main.cpp  UserRegistrationController.cpp  UserRegistrationController.h
user-registration-refactoring-kata/src/domain/: User.cpp  User.h
user-registration-refactoring-kata/src/framework/: DatabaseException.h  DatabasePersistence.cpp  DatabasePersistence.h  FrameworkPersistence.cpp  FrameworkPersistence.h  HttpFrameworkRequest.cpp  HttpFrameworkRequest.h  HttpFrameworkResponse.cpp  HttpFrameworkResponse.h  UserRegistrationController.cpp  UserRegistrationController.h
user-registration-refactoring-kata/src/libraries/: CUrlEmailSender.cpp  CUrlEmailSender.h
user-registration-refactoring-kata/test/: TestRunnerApp.cpp  UserRegistrationControllerTest.cpp  UserRegistrationControllerTest.h
web-page-generator-kata/: .gitignore  Makefile
web-page-generator-kata/src/: User.cpp  User.h  UserStaticWebPageGenerator.cpp  UserStaticWebPageGenerator.h  WebPageGenerator.cpp  web_page_generator.cpp
